compiler/typ/tests/fixtures/diagnostics/0469_modules_outer_hidden_annotation_mismatch_05.ml.infer.expected
File "0469_modules_outer_hidden_annotation_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0469_modules_outer_hidden_annotation_mismatch_05 is not a valid module name.

File "0469_modules_outer_hidden_annotation_mismatch_05.ml", line 15, characters 14-36:
15 | let _ : int = Outer_epsilon.Hidden.x
                   ^^^^^^^^^^^^^^^^^^^^^^
Error: The value Outer_epsilon.Hidden.x has type Outer_epsilon.Hidden.t
       but an expression was expected of type int
